--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -1,3 +1,3 @@
 ## Get in touch
 
-Visit [my website](https://www.lekoarts.de?utm_source=cara&utm_medium=Starter) or find me on other platforms: [Twitter](https://www.twitter.com/lekoarts_de) & [LinkedIn](https://www.linkedin.com/in/lennart-joergens/)
+Visit [my website](https://mhooshdar.dev) or find me on other platforms: [LinkedIn](https://www.linkedin.com/in/mhooshdar/)
